--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "live-class-notetaker",
+  "name": "quick-note",
   "version": "1.0.0",
   "description": "A note taking app for live class",
   "author": "Ajmal Nasumudeen",
