--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,8 @@
   ],
   "permissions": [ "tabs", "tabCapture", "activeTab", "background", "storage"],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background.js",
+     "type": "module"
   },
 
   "action": {
