--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Quick Note AI",
   "version": "1.0",
-  "description": "Take live notes from video classes using AI.",
+  "description": "An extension for Quick Note AI that records meetings, provides summaries on the dashboard, and offers insights for meeting notes, classes, and more.",
   "host_permissions": [
     "http://localhost:8000/*",
     "https://llm-service-api-435l.onrender.com/*",
@@ -10,20 +10,20 @@
   ],
   "permissions": [ "tabs", "tabCapture", "activeTab", "background", "storage"],
   "background": {
-    "service_worker": "background.js",
+    "service_worker": "src/background.js",
      "type": "module"
   },
 
   "action": {
-    "default_popup": "popup/popup.html",
-    "default_icon": "assets/icon.png"
+    "default_popup": "src/popup/popup.html",
+    "default_icon": "src/assets/icon.png"
   },
   "content_security_policy": {
   "extension_pages": "script-src 'self'; object-src 'self'"
 },
   "icons": {
-    "16": "assets/icon.png",
-    "48": "assets/icon.png",
-    "128": "assets/icon.png"
+    "16": "src/assets/icon.png",
+    "48": "src/assets/icon.png",
+    "128": "src/assets/icon.png"
   }
 }
